--- a/sassmain.css
+++ b/sassmain.css
@@ -35,9 +35,23 @@ body {
   font: 100% "Open Sans", sans-serif;
 }
 
+.favColor {
+  background-color: darkgrey;
+  border-radius: 0.25em;
+  text-align: center;
+  position: absolute;
+  bottom: 41%;
+  left: 12%;
+  width: 75%;
+  margin: 0 auto;
+  padding-top: 12px;
+  padding-bottom: 10px;
+  margin-top: 50px;
+}
+
 #yellow {
   background-color: yellow;
-  padding-top: 20px;
+  padding-top: 50px;
   padding-bottom: 20px;
   margin: 0px;
 }
